<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="action_settings">Settings</string>
    <string name="algorithm">Algorithm: %1$s</string>
    <string name="proof_type">Proof Type: %1$s</string>
    <string name="id_template">ID: %1$d</string>
    <string name="id_dollar_template">$%1$s</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="coin_logo">Coin Logo</string>
    <string name="application_logo">Application Logo</string>
    <string name="my_portfolio">My Portfolio</string>
    <string name="all_coins">All Coins</string>
    <string name="add_coin">ADD COIN</string>
    <string name="can_t_find_your_coin">Can\'t find your coin?</string>
    <string name="click_here_to_refresh_the_database">Click here to refresh the database</string>
    <string name="current_price">Current Price</string>
    <string name="owned">Owned</string>
    <string name="add_to_portfolio">Add to portfolio</string>
    <string name="edit_portfolio">Edit portfolio</string>
    <string name="remove">Remove</string>
    <string name="one_day_abbreviation">1D</string>
    <string name="one_week_abbreviation">1W</string>
    <string name="one_month_abbreviation">1M</string>
    <string name="three_month_abbreviation">3M</string>
    <string name="six_month_abbreviation">6M</string>
    <string name="one_year_abbreviation">1Y</string>
    <string name="all">ALL</string>
    <string name="coin">COIN</string>
    <string name="coins">Coins</string>
    <string name="price">PRICE</string>
    <string name="holdings">HOLDINGS</string>
    <string name="portfolio">Portfolio</string>
    <string name="_24h_change_percent">24h Change %</string>
    <string name="_24h_change_currency">24h Change $</string>
    <string name="error_network_error">Error connecting to server. Coin prices may be out of date.</string>
    <string name="history">History</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme">Theme</string>
    <string name="currency">Currency</string>
    <string name="live_update_prices">Live update prices</string>
    <string name="_24h_change">24H Change</string>
    <string name="_1w_change">1W Change</string>
    <string name="_1m_change">1M Change</string>
    <string name="_3m_change">3M Change</string>
    <string name="_6m_change">6M Change</string>
    <string name="_1Y_change">1Y Change</string>
    <string name="_all_time">All Time</string>
    <string name="wallet_value">Wallet Value</string>
    <string name="_24h_high">24h High</string>
    <string name="_24h_low">24h Low</string>
    <string name="_24h">24h</string>
    <string name="teal">Teal</string>
    <string name="search">Search</string>
    <string name="title_coindetail">Coin Detail</string>
    <string name="title_settings">Settings</string>
    <string name="title_coinlist">Coin List</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_themeplayground">Theme Playground</string>
    <string name="title_dialogs">Dialogs</string>
    <string name="title_remote">Dialogs</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

</resources>
